nav bar no longer clickable when invisible

--- a/styles/navStyles.css
+++ b/styles/navStyles.css
@@ -16,11 +16,13 @@
     padding: 15px 10px;
     border-radius: 1.25rem 1.25rem 0 0;
     opacity: 0;
+    pointer-events: none;
     transition: opacity 0.5s;
   }
 
   .nav-active {
     opacity: 1;
+    pointer-events: all;
   }
 
   @media screen and (max-width: 600px) {
